# qtstatusbar

./: CMakeLists.txt  README.md  main.cpp  main.qml  statusbar.cpp  statusbar.h  statusbar.pro
QStatusBarLib/: CMakeLists.txt  statusbar.pri
QStatusBarLib/src/: statusbar_android.cpp
example/: CMakeLists.txt  main.cpp  main.qml  statusbar.pro
src/: CMakeLists.txt  statusbar.cpp  statusbar.pri  statusbar_android.cpp  statusbar_ios.mm
